syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

option go_package = "github.com/stellarisJAY/nesgo/backend/api/user/service/v1;v1";

service User {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetUserByName(GetUserByNameRequest) returns (GetUserByNameResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse) {}

  rpc CreateUserKeyboardBinding(CreateUserKeyboardBindingRequest) returns (CreateUserKeyboardBindingResponse) {}
  rpc ListUserKeyboardBinding(ListUserKeyboardBindingRequest) returns (ListUserKeyboardBindingResponse) {}
  rpc GetUserKeyboardBinding(GetUserKeyboardBindingRequest) returns (GetUserKeyboardBindingResponse) {}
  rpc UpdateUserKeyboardBinding(UpdateUserKeyboardBindingRequest) returns (UpdateUserKeyboardBindingResponse) {}
  rpc DeleteUserKeyboardBinding(DeleteUserKeyboardBindingRequest) returns (DeleteUserKeyboardBindingResponse) {}

  rpc CreateMacro(CreateMacroRequest) returns (CreateMacroResponse) {}
  rpc GetMacro(GetMacroRequest) returns (GetMacroResponse) {}
  rpc ListMacro(ListMacroRequest) returns (ListMacroResponse) {}
  rpc DeleteMacro(DeleteMacroRequest) returns (DeleteMacroResponse) {}
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
}

message GetUserByNameRequest {
  string name = 1;
}

message GetUserByNameResponse {
  int64 id = 1;
  string name = 2;
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
}

message CreateUserResponse {
  int64 id = 1;
  string name = 2;
}

message UpdateUserRequest {
  int64  id = 1;
  string name = 2;
  string password = 3;
}

message UpdateUserResponse {
  int64  id = 1;
  string name = 2;
}

message VerifyPasswordRequest {
  string name = 1;
  string password = 2;
}

message VerifyPasswordResponse {}

message KeyboardBinding {
  string keyboardKey = 1;
  string emulatorKey = 2;
  string keyboardKeyTranslated = 3;
  string emulatorKeyTranslated = 4;
}

message UserKeyboardBinding {
  int64 id = 1;
  int64 userId = 2;
  string name = 3;
  repeated KeyboardBinding bindings = 4;
}

message GetUserKeyboardBindingRequest {
  int64 id = 1;
}

message GetUserKeyboardBindingResponse {
  UserKeyboardBinding binding = 1;
}

message ListUserKeyboardBindingRequest {
  int64 userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message ListUserKeyboardBindingResponse {
  repeated UserKeyboardBinding bindings = 1;
  int32 total = 2;
}

message CreateUserKeyboardBindingRequest {
  int64 userId = 1;
  string name = 2;
  repeated KeyboardBinding bindings = 3;
}

message CreateUserKeyboardBindingResponse {}

message UpdateUserKeyboardBindingRequest {
  int64 id = 1;
  int64 userId = 2;
  string name = 3;
  repeated KeyboardBinding bindings = 4;
}

message UpdateUserKeyboardBindingResponse {}

message DeleteUserKeyboardBindingRequest {
  int64 id = 1;
  int64 userId = 2;
}

message DeleteUserKeyboardBindingResponse {}

message MacroAction {
  string emulatorKey = 1;
  int64 releaseDelay = 2;
}

message Macro {
  int64 id = 1;
  int64 userId = 2;
  string name = 3;
  string keyboardKey = 4;
  repeated MacroAction actions = 5;
}

message CreateMacroRequest {
  int64 userId = 1;
  string name = 2;
  string keyboardKey = 3;
  repeated MacroAction actions = 4;
}

message CreateMacroResponse {}

message GetMacroRequest {
  int64 id = 1;
}

message GetMacroResponse {
  Macro macro = 1;
}

message ListMacroRequest {
  int64 userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message ListMacroResponse {
  repeated Macro macros = 1;
  int32 total = 2;
}

message DeleteMacroRequest {
  int64 id = 1;
}

message DeleteMacroResponse {}

